[+] plxShow::comMessage() : ajout parametre format (variable #com_message)
[+] plxShow: ajout de la méthode artCatIds()
[+] plxShow: ajout de la méthode artActiveCatId()
[+] Gestionnaire de médias: tri des dossiers dans le déroulant 'Dossier'
[+] plxPlugin: ajout de la fonction setAdminMenu pour personnaliser le menu permettant d'accèder à la page admin.php d'un plugin
[-] plxShow: suppression de la méthode artCatId()
[-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
BUG Pas d'affichage des articles affectés à plusieurs catégories si une catégorie est inactive
BUG plxShow:pagination(): lien "première page" collé au lien "précédente"
BUG plxPlugins::getInfos(): mauvais test sur la récupération du site
BUG sitemap: mauvais format de date dans la balise lastmod
BUG plxShow::catName() : appel de la fonction carUrl au lieu de catUrl
BUG plxUtils::makeThumb() : problème si largeur ou hauteur non renseignée
BUG plxUtils::strCut() : problème pour couper une chaine de caractère avec l'encodage UTF-8
BUG Réécriture d'url: mauvaise gestion des paramètres dans l'url (&)
BUG plxShow::artAuthorInfos() : erreur si l'auteur n'existe plus
BUG plxShow::staticList() : tri des menus différents si paramètre extra renseigné ou pas
BUG plxShow::templateCss() : mauvais chemin dans le test existence fichier css (contribution danielsan)
BUG plxFeed::getRssArticles() : pas de réécriture d'url dans la balise atom:link (contribution petitchevalroux)
BUG plxFeed: erreur date dans les flux rss si aucun article 
Sécurité: Faille XSS possible sur la récupération de l'adresse ip d'un visiteur (remerciement à The Lizard King)
Sécurité: Mauvais contrôle des tokens (remerciement à The Lizard King)
Sécurité: Suppression du champ contenant la solution du captcha dans le formulaires des commentaires (remerciement à The Lizard King)

## PLUXML 5.1.6 (sortie : 16/04/2012) ##
