@@ -242,7 +242,7 @@ $LANG = array(
 'L_MEDIAS_DIMENSIONS'										=> 'Dimensions',
 'L_MEDIAS_RESIZE'											=> 'Resize Images',
 'L_MEDIAS_RESIZE_NO'										=> 'Original Size',
-'L_MEDIAS_THUMBS'											=> 'Create thumbnail',
+'L_MEDIAS_THUMBS'											=> 'Create thumbnails',
 'L_MEDIAS_THUMBS_NONE'										=> 'No thumbnail',
 'L_MEDIAS_MODIFY'											=> 'Edit',
 'L_MEDIAS_THUMB'											=> 'Thumbnail',
