@@ -234,7 +234,7 @@ $LANG = array(
 'L_MEDIAS_DIMENSIONS'										=> 'Dimensiones',
 'L_MEDIAS_RESIZE'											=> 'Cambiar el tama?o de las im?genes',
 'L_MEDIAS_RESIZE_NO'										=> 'Tama?o original',
-'L_MEDIAS_THUMBS'											=> 'Crear miniatura',
+'L_MEDIAS_THUMBS'											=> 'Crear miniaturas',
 'L_MEDIAS_THUMBS_NONE'										=> 'No miniatura',
 'L_MEDIAS_MODIFY'											=> 'Editar',
 'L_MEDIAS_THUMB'											=> 'Miniatura',
