@@ -234,7 +234,7 @@ $LANG = array(
 'L_MEDIAS_DIMENSIONS'										=> 'Dimensies',
 'L_MEDIAS_RESIZE'											=> 'Afbeeldinggrootte',
 'L_MEDIAS_RESIZE_NO'										=> 'Oorspronkelijk formaat',
-'L_MEDIAS_THUMBS'											=> 'Maak thumbnail',
+'L_MEDIAS_THUMBS'											=> 'Maak thumbnails',
 'L_MEDIAS_THUMBS_NONE'										=> 'Geen miniatuur',
 'L_MEDIAS_MODIFY'											=> 'Bewerken',
 'L_MEDIAS_THUMB'											=> 'Thumbnail',
