@@ -234,7 +234,7 @@ $LANG = array(
 'L_MEDIAS_DIMENSIONS'										=> 'Dimensões',
 'L_MEDIAS_RESIZE'											=> 'Redimensionar Imagens',
 'L_MEDIAS_RESIZE_NO'										=> 'Tamanho Original',
-'L_MEDIAS_THUMBS'											=> 'Criar miniaturas',
+'L_MEDIAS_THUMBS'											=> 'Utwórz miniaturę',
 'L_MEDIAS_THUMBS_NONE'										=> 'Não miniatura',
 'L_MEDIAS_MODIFY'											=> 'Editar',
 'L_MEDIAS_THUMB'											=> 'Miniatura',
