@@ -234,7 +234,7 @@ $LANG = array(
 'L_MEDIAS_DIMENSIONS'										=> 'Dimensiuni',
 'L_MEDIAS_RESIZE'											=> 'Redimensionarea Imagini',
 'L_MEDIAS_RESIZE_NO'										=> 'Dimensiune original',
-'L_MEDIAS_THUMBS'											=> 'A crea thumbnail',
+'L_MEDIAS_THUMBS'											=> 'A crea thumbnails',
 'L_MEDIAS_THUMBS_NONE'										=> 'Nu thumbnail',
 'L_MEDIAS_MODIFY'											=> 'Editare',
 'L_MEDIAS_THUMB'											=> 'Thumbnail',
