@@ -287,7 +287,7 @@ $LANG = array(
 'L_MEDIAS_NO_FILE'											=> 'Нет файлов',
 'L_MEDIAS_RESIZE'											=> 'Изменение размера изображения',
 'L_MEDIAS_RESIZE_NO'										=> 'Размер оригинала',
-'L_MEDIAS_THUMBS'											=> 'Создать эскиз',
+'L_MEDIAS_THUMBS'											=> 'Создание миниатюр',
 'L_MEDIAS_THUMBS_NONE'										=> 'Без эскиза',
 'L_MEDIAS_MODIFY'											=> 'Изменить',
 'L_MEDIAS_THUMB'											=> 'Эскиз',
