@@ -99,6 +99,7 @@ $config = array('title'=>'PluXml',
 				'images_h'=>600,
 				'miniatures_l'=>200,
 				'miniatures_h'=>100,
+				'thumbs'=>1, 
 				'images'=>'data/images/',
 				'documents'=>'data/documents/',
 				'racine_articles'=>'data/articles/',
